# Citadel

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALL.md  PROGRESS.md  README.md  USER_GUIDE.md  lerobot_convert.md  pixi.toml  pyproject.toml
backend/: main.py
backend/config/: __init__.py  settings.py
backend/models/: task.py
backend/routers/: convert.py  download.py  merge.py  tasks.py  upload.py  validation.py
backend/services/: convert_service.py  database.py  download_service.py  merge_service.py  postgre_sql_manager.py  upload_service.py
cli/: convert_cli.py  download_cli.py  merge_cli.py  upload_cli.py
cli/utils/: mc_executor.py  progress.py
config/: README.md  bos_config.yaml  demo_test.yaml  dual_arm_chunking.yaml  dual_arm_nearest.yaml  dual_arm_window.yaml  redis_config.yaml  storage.yaml  web_config.yaml
config/strategies/: chunking.yaml  nearest.yaml  window.yaml
docs/: alignment_analysis_summary.md  frame_state_alignment.md
examples/: verify_output.py
fastapi_app/: __init__.py  main.py
fastapi_app/routers/: config.py  monitor.py  scanner.py  worker.py
fastapi_app/schemas/: models.py
fastapi_app/services/: scanner_service.py  (+1 more)
frontend/: .env.example  package-lock.json  package.json  vite.config.js  vite.config.ts
lerobot_converter/: __init__.py  cli.py
scripts/: analyze_frame_state_alignment.py  bos_scanner.py  convert.py  download.sh  filter_lerobot.py  merge_lerobot.py  monitor_redis.py  publish_task.py  redis_worker.py  visualize_parquet.py  visualize_video_sync.py
tests/: test_full_bos_flow.py
(+97 files in other folders)
